tests/ui/opt_as_first.stderr
error[E0277]: `Option<&&str>` cannot be the first element of a query
  --> tests/ui/opt_as_first.rs:14:11
   |
14 |     world.query::<(Option<&&str>, &u32)>(|_, (s, i)| results.push((*i, s.map(|s| *s))));
   |           ^^^^^
   |
   = help: the trait `secs::query::Always` is not implemented for `Option<&&str>`
   = note: move another element to the front of the list
   = help: the following other types implement trait `secs::query::Always`:
             &T
             &mut T
   = note: required for `(Option<&&str>, &u32)` to implement `secs::query::Query<'_>`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
